--- a/wms/wms-storage/pom.xml
+++ b/wms/wms-storage/pom.xml
@@ -66,10 +66,17 @@
             <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
         <!--actuator-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-actuator</artifactId>-->
+        <!--</dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-actuator</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.54</version>
         </dependency>
+
     </dependencies>
 
 </project>
